# semantic-endpointing

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: ngrok.bash
server/: main.py
src/: main.py
