[project]
name = "semantic-endpointing"
description = "Demo showcasing semantic endpointing for voice agents"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "librosa>=0.11.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "torch>=2.7.1",
    "transformers>=4.53.3",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
