[project]
name = "semantic-endpointing"
description = "Demo showcasing semantic endpointing for voice agents"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "g711>=1.6.5",
    "librosa>=0.11.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "transformers>=4.53.3",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
